--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
+    "endOfLine": "auto",
+    "arrowParens": "avoid",
+    "bracketSpacing": true,
+    "printWidth": 100,
     "semi": true,
-    "trailingComma": "all",
+    "trailingComma": "es5",
     "singleQuote": true,
-    "printWidth": 80,
     "tabWidth": 4
 }
