Updated package dependencies including buffer, otpauth, and webpack; refactored TOTP generation logic in TotpList component to utilize otpauth library, enhancing OTP generation reliability and performance. Improved handling of configuration state in TotpList for better user interaction.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "buffer": "^6.0.3",
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
@@ -33,6 +34,7 @@
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "i18next": "^25.2.1",
+    "otpauth": "^9.4.0",
     "otplib": "^12.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -55,7 +57,8 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "webpack": "^5.99.9"
   },
   "private": true
 }
