--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3",
-    "webpack": "^5.99.9"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
